--- a/React 영화 웹 서비스/2강/vanilla.html
+++ b/React 영화 웹 서비스/2강/vanilla.html
@@ -1,17 +1,21 @@
 <!--바닐라JS로 버튼 앱 만들기-->
 <!DOCTYPE html>
-<body>
+  <html>
+  <head>
+    <title>바닐라JS로 버튼 앱 만들기</title>
+  </head>
+  <body>
     <span>Total clicks: 0</span>
     <button id="btn">Click me</button>
-</body>
-<script>
+  </body>
+  <script>
     let counter = 0;
     const button = document.getElementById("btn");
     const span = document.querySelector("span");
     function handleClick() {
-        counter = counter + 1;
-        span.innerText = `Total clicks: ${counter}`;
+      counter = counter + 1;
+      span.innerText = `Total clicks: ${counter}`;
     }
     button.addEventListener("click", handleClick);
-</script>
+ </script>
 </html>
