--- a/React 영화 웹 서비스/3강/counter_bad_render.html
+++ b/React 영화 웹 서비스/3강/counter_bad_render.html
@@ -13,15 +13,24 @@
 
   <script type="text/babel">
     const root = document.getElementById("root");
+    let counter = 0;
+    
+    function counterUp() {
+      counter = counter +1;
+      rendering();
+    }
+    function rendering() {
+      ReactDOM.render(<Container />, root);
+    }
 
     /* 컴포넌트 첫 글자는 대문자 */
-    const Container = (
+    const Container = () => {
       <div>
-        <h3>Total click: 0</h3>
-        <button>Click me</button>
+        <h3>Total click: {counter}</h3>
+        <button onClick={counterUp}>Click me</button>
       </div>
-    );
+    };
     /* 렌더링: 사용자에게 보여줌 */
-    ReactDOM.render(Container, root)     /* (생성할 태그, 생성 장소) */
+    ReactDOM.render(Container, root);     /* (생성할 태그, 생성 장소) */
   </script>
 </html>
