--- a/React 영화 웹 서비스/4강/prop_types.html
+++ b/React 영화 웹 서비스/4강/prop_types.html
@@ -6,38 +6,38 @@
   <body>
     <div id="root"></div>
   </body>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <!-- Load Babel -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-    function Btn({ text, changeValue }) {
-      console.log(text, "was rendered");
+    function Btn({ text, fontSize }) {
       return (
         <button
-          onClick={changeValue}
           style={{
             backgroundColor: "tomato",
             color: "white",
             padding: "10px 20px",
             border: 0,
             borderRadius: 10,
+            fontSize: fontSize,
           }}
         >{text}</button>
       );
     }
-    // React.memo
-    const MemorizedBtn = React.memo(Btn);
+    Btn.propTypes = {
+      text: PropTypes.string,
+      fontSize: PropTypes.number.isRequired,
+    }
 
     function App() {
-      const [value, setValue] = React.useState("Save Changes");
-      const changedValue = () => setValue("Revert Changes");
 
       return (
         <div>
-          <MemorizedBtn text={value} changeValue={changedValue} />
-          <MemorizedBtn text="Continue" />
+          <Btn text="Save Changes" fontSize={18} />
+          <Btn text={"Continue"} fontSize={14} />
         </div>
       );
     }
